--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="uploads/kalai.pdf" download="Kalai.pdf" class="btn btn-primary mt-3 ">Download Resume</a>
+                    <a href="uploads/Kalai.pdf" download="Kalai.pdf" class="btn btn-primary mt-3 ">Download Resume</a>
                 </div>
             </div>
         </div>
