--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                     <img src="images\UX Design Project.png" class="d-block w-100" alt="...">
                                     <div class="card-body">
                                         <h4 class="card-title text-center">UX Design - Portfolio Project</h4>
-                                        <p class="card-text">ParkNow is a mobile app and responsive website designed to help users find, dispute, and manage their parking tickets easily. The target users include regular drivers who face parking violations and need a hassle-free way to resolve issues. (<a href="uploads/Google UX Design Certificate - Portfolio Project 2 - Case study slide deck [Template].pdf" target="_blank">PPT</a>)</p>
+                                        <p class="card-text">ParkNow is a mobile app and responsive website designed to help users find, dispute, and manage their parking tickets easily. The target users include regular drivers who face parking violations and need a hassle-free way to resolve issues. (<a href="uploads/Google UX Design Certificate - Portfolio Project 2 - Case study slide deck [Template].pdf">PPT</a>)</p>
                                         <div class="text-center">
                                             <a href="https://www.figma.com/design/EC6E2rSQt7v2PFOlJCXRYk/ParkNow?node-id=0-1&t=hDYqsZ3DskyNnhI2-1" class="btn btn-primary">Link</a>
                                         </div>
