--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="card-body">
                             <img src=" https://cdn-icons-png.flaticon.com/128/711/711284.png" alt="Programmimg" class="skillsIcon">
                             <h4 class="card-title mt-3">C, Python</h4>
-                            <p class="card-text mt-3">I have knowledge in C and Python languages. I regularly practice these codes in Hackerrank.</p>
+                            <p class="card-text mt-3">I have knowledge in C and Python languages. I regularly practice these codes in Hackerrank.<a href="uploads/Kalaivani S CPDA Certificate.pdf"> Python Certification </a> </p>
                         </div>
                     </div>
                 </div>  
