--- a/index.html
+++ b/index.html
@@ -254,11 +254,21 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="images\Landing Page.png" class="d-block w-100" alt="...">
+                                    <img src="images\Product-card.png" class="d-block w-100" alt="...">
                                     <div class="card-body">
                                         <h4 class="card-title text-center">Landing Page</h4>
                                         <div class="text-center">
                                             <a href="https://kalai1121.github.io/Veritech-Intern-task-2/" class="btn btn-primary">Link</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="carousel-item">
+                                    <img src="images\Landing Page.png" class="d-block w-100" alt="...">
+                                    <div class="card-body">
+                                        <h4 class="card-title text-center">Product Card using Tailwind CSS</h4>
+                                        <div class="text-center">
+                                            <a href="https://kalai1121.github.io/Product-Card-with-tailwind-css/" class="btn btn-primary">Link</a>
                                         </div>
                                     </div>
                                 </div>
