--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -320,7 +320,7 @@
         <div class="container-fluid">
             <!-- social media icons -->
             <div class="social-icons mt-4">
-                <a href="mailto:kvani5783@gmail.com" target="_blank"><i class="fas fa-envelope "></i></a>
+                <a href="mailto:kvani11021@gmail.com" target="_blank"><i class="fas fa-envelope "></i></a>
                 <a href="https://github.com/Kalai1121" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/kalaivani-s-96509921b" target="_blank"><i class="fab fa-linkedin"></i></a>    
             </div>
