--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div id="carouselControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img src="images/survey form.jpg" class="d-block w-100" alt="...">
