--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <h2 class="hero_title">Hi, it's me Kalai</h2>
                     <p class="hero_desc">I am a job seeker for Software Developing Roles</p>
+                    <a href="mailto:kvani11021@gmail.com?subject=Job%20Opportunity" class="hire-me-button btn btn-sm mt-3">Hire Me</a>
+                    <a href="uploads/Kalai.pdf" download="Kalai.pdf" class="btn btn-sm mt-3 ">Download Resume</a>
+                    
                 </div>
             </div>
         </div>
@@ -80,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="uploads/Kalai.pdf" download="Kalai.pdf" class="btn btn-primary mt-3 ">Download Resume</a>
+                    <a href="uploads/Kalai.pdf" download="Kalai.pdf" class="resume-button btn mt-3 ">Download Resume</a>
                 </div>
             </div>
         </div>
@@ -200,7 +203,7 @@
                                         <h4 class="card-title text-center">Survey Form</h4>
                                         <p class="card-text">A survey form is a method of gathering information from a sample of individuals through their responses to questions.</p>
                                         <div class="text-center">
-                                            <a href="https://kalai1121.github.io/Survey-Form/" class="btn btn-primary">Link</a>
+                                            <a href="https://kalai1121.github.io/Survey-Form/" class="btn link-button">Link</a>
                                         </div>
                                     </div>
                                 </div>
@@ -210,7 +213,7 @@
                                         <h4 class="card-title text-center">Tribute Page</h4>
                                         <p class="card-text">A tribute page is a web page dedicated to honoring and remembering a person by highlighting their achievements, sharing memories, and supporting a cause related to that individual.</p>
                                         <div class="text-center">
-                                            <a href="https://kalai1121.github.io/Tribute-page/" class="btn btn-primary">Link</a>
+                                            <a href="https://kalai1121.github.io/Tribute-page/" class="btn link-button">Link</a>
                                         </div>
                                     </div>
                                 </div>
@@ -220,7 +223,7 @@
                                         <h4 class="card-title text-center">Personal-Portfolio-Website</h4>
                                         <p class="card-text">A personal portfolio webpage is a dedicated web page that showcases an individual's work, skills, projects, achievements, and personality.</p>
                                         <div class="text-center">
-                                            <a href="https://kalai1121.github.io/Personal-Portfolio/" class="btn btn-primary">Link</a>
+                                            <a href="https://kalai1121.github.io/Personal-Portfolio/" class="btn link-button">Link</a>
                                         </div>
                                     </div>
                                 </div>
@@ -230,7 +233,7 @@
                                         <h4 class="card-title text-center">Technical Documentation Page</h4>
                                         <p class="card-text">A product landing page is a specialized type of web page designed with the singular purpose of converting incoming traffic into sales for a specific product.</p>
                                         <div class="text-center">
-                                            <a href="https://kalai1121.github.io/Technical-Documentation-Page/" class="btn btn-primary">Link</a>
+                                            <a href="https://kalai1121.github.io/Technical-Documentation-Page/" class="btn link-button">Link</a>
                                         </div>
                                     </div>
                                 </div>
@@ -240,7 +243,7 @@
                                         <h4 class="card-title text-center">UX Design - Portfolio Project</h4>
                                         <p class="card-text">ParkNow is a mobile app and responsive website designed to help users find, dispute, and manage their parking tickets easily. The target users include regular drivers who face parking violations and need a hassle-free way to resolve issues. (<a href="uploads/Google UX Design Certificate - Portfolio Project 2 - Case study slide deck [Template].pdf">PPT</a>)</p>
                                         <div class="text-center">
-                                            <a href="https://www.figma.com/design/EC6E2rSQt7v2PFOlJCXRYk/ParkNow?node-id=0-1&t=hDYqsZ3DskyNnhI2-1" class="btn btn-primary">Link</a>
+                                            <a href="https://www.figma.com/design/EC6E2rSQt7v2PFOlJCXRYk/ParkNow?node-id=0-1&t=hDYqsZ3DskyNnhI2-1" class="btn link-button">Link</a>
                                         </div>
                                     </div>
                                 </div>
@@ -249,7 +252,7 @@
                                     <div class="card-body">
                                         <h4 class="card-title text-center">Responsive Company Member Team Page</h4>
                                         <div class="text-center">
-                                            <a href="https://kalai1121.github.io/Veritrech-Intern-task-1/" class="btn btn-primary">Link</a>
+                                            <a href="https://kalai1121.github.io/Veritrech-Intern-task-1/" class="btn link-button">Link</a>
                                         </div>
                                     </div>
                                 </div>
@@ -258,7 +261,16 @@
                                     <div class="card-body">
                                         <h4 class="card-title text-center">Landing Page</h4>
                                         <div class="text-center">
-                                            <a href="https://kalai1121.github.io/Veritech-Intern-task-2/" class="btn btn-primary">Link</a>
+                                            <a href="https://kalai1121.github.io/Veritech-Intern-task-2/" class="btn link-button">Link</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/Student Data Form.png" class="d-block w-100" alt="...">
+                                    <div class="card-body">
+                                        <h4 class="card-title text-center">Student Data Form</h4>
+                                        <div class="text-center">
+                                            <a href="https://kalai1121.github.io/Student-Data-Form-using-JS/" class="btn link-button">Link</a>
                                         </div>
                                     </div>
                                 </div>
@@ -268,7 +280,7 @@
                                     <div class="card-body">
                                         <h4 class="card-title text-center">Product Card using Tailwind CSS</h4>
                                         <div class="text-center">
-                                            <a href="https://kalai1121.github.io/Product-Card-with-tailwind-css/" class="btn btn-primary">Link</a>
+                                            <a href="https://kalai1121.github.io/Product-Card-with-tailwind-css/" class="btn link-button">Link</a>
                                         </div>
                                     </div>
                                 </div>
