--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <h2 class="hero_title">Hi, it's me Kalai</h2>
                     <p class="hero_desc">I am a job seeker for Software Developing Roles</p>
-                    <a href="mailto:kvani11021@gmail.com?subject=Job%20Opportunity" class="hire-me-button btn btn-sm mt-3">Hire Me</a>
-                    <a href="uploads/Kalai.pdf" download="Kalai.pdf" class="btn btn-sm mt-3 ">Download Resume</a>
+                    <a href="mailto:kvani11021@gmail.com?subject=Job%20Opportunity" class="hire-me-button btn btn-sm">Hire Me</a>
+                    <a href="uploads/Kalai.pdf" download="Kalai.pdf" class="btn btn-sm">Download Resume</a>
                     
                 </div>
             </div>
