--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h2 class="hero_title">Hi, it's me Kalai</h2>
                     <p class="hero_desc">I am a job seeker for Software Developing Roles</p>
                     <a href="mailto:kvani11021@gmail.com?subject=Job%20Opportunity" class="hire-me-button btn btn-sm">Hire Me</a>
-                    <a href="uploads/Kalai.pdf" download="Kalai.pdf" class="btn btn-sm">Download Resume</a>
+                    <a href="uploads/Kalai.pdf" download="Kalai Resume.pdf" class="btn btn-sm">Download Resume</a>
                     
                 </div>
             </div>
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="uploads/Kalai.pdf" download="Kalai.pdf" class="resume-button btn mt-3 ">Download Resume</a>
+                    <a href="uploads/Kalai.pdf" download="Kalai Resume.pdf" class="resume-button btn mt-3 ">Download Resume</a>
                 </div>
             </div>
         </div>
