Add projects and skills

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 <img src="https://cdn-icons-png.flaticon.com/128/2303/2303952.png" alt="experience imege" class="icon"><br>
                                 <h3>Experience</h3>
                                 <p>Fresher<br>
-                                Web Developer | Front End Developer</p>
+                                Full Stack Developer(MERN) | Web Developer | Front End Developer</p>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
 
                         <!-- Student Data Management System -->
                         <div class="carousel-item active">
-                            <img src="images\Student Data Management.jpg" class="d-block w-100" alt="Student Data Management">
+                            <img src="images\Student Data Management.png" class="d-block w-100" alt="Student Data Management">
                             <div class="card-body">
                                 <h4 class="card-title text-center">Student Data Management System</h4>
                                 <p class="card-text"><em>Technologies used:</em> MongoDB, Express.js, React.js, Node.js, Bootstrap, Postman, MongoDB Compass</p>
@@ -207,9 +207,9 @@
 
                         <!-- To-Do List Project -->
                         <div class="carousel-item">
-                            <img src="images/todo-list.png" class="d-block w-100" alt="To-Do List">
+                            <img src="images\To-Do List.png" class="d-block w-100" alt="To-Do List">
                             <div class="card-body">
-                                <h4 class="card-title text-center">To-Do List Application</h4>
+                                <h4 class="card-title text-center">To-Do List App</h4>
                                 <p class="card-text"><em>Technologies used:</em> MongoDB, Express.js, React.js, Node.js, Bootstrap, jQuery</p>
                                 <p class="card-text">
                                     A MERN stack task manager that allows users to add, edit, mark complete, and delete tasks.  
