--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                     <h2 class="hero_title">Hi, it's me Kalai</h2>
-                    <p class="hero_desc">I am a job seeker for Software Developing Roles</p>
+                    <p class="hero_desc">Full Stack Developer (MERN) </p>
                     <a href="mailto:kvani11021@gmail.com?subject=Job%20Opportunity" class="hire-me-button btn btn-sm">Hire Me</a>
                     <a href="uploads/Kalai.pdf" download="Kalai Resume.pdf" class="btn btn-sm">Download Resume</a>
                     
@@ -61,16 +61,14 @@
                     <img src="images/kalai image1.jpeg" alt="Kalai Image" class="img-fluid profile-img">
                 </div>
                 <div class="col-lg-7">
-                    <p> As an energetic and passionate developer, I possess good knowledge in HTML, CSS, and JavaScript.
-                        I leverage the skills acquired through my coursework and self-study to create projects that address real-world problems, aiming to facilitate an easier and smarter life for society.</p>
+                    <p> As a dedicated Full Stack Developer at LetzBizz, I specialize in building responsive, scalable, and user-focused web applications using the MERN stack. With strong skills in HTML, CSS, JavaScript, and React, I enjoy turning ideas into well-designed digital experiences. I apply the knowledge gained through real-world projects, industry exposure, and continuous learning to create solutions that simplify tasks, improve usability, and add value to users. Passionate about clean code, problem-solving, and UI/UX principles, I am always exploring modern technologies to enhance my development workflow and deliver impactful results.</p>
                     <br>
                     <div class="row mt-3">
                         <div class="col-md-6">
                             <div class="info-box">
                                 <img src="https://cdn-icons-png.flaticon.com/128/1940/1940611.png" alt="experience imege" class="icon">
                                 <h3>Education</h3>
-                                <p>B.E - Electronics and Communication Engineering<br>
-                            2023 Passout</p>
+                                <p>B.E - Electronics and Communication Engineering</p>
                             </div>  
                         </div>
                     
@@ -78,8 +76,7 @@
                             <div class="info-box">
                                 <img src="https://cdn-icons-png.flaticon.com/128/2303/2303952.png" alt="experience imege" class="icon"><br>
                                 <h3>Experience</h3>
-                                <p>Fresher<br>
-                                Full Stack Developer(MERN) | Web Developer | Front End Developer</p>
+                                <p>Full Stack Developer at Letzbizz | MERN Stack | React.js | Node.js | JavaScript | UI/UX Enthusiast</p>
                             </div>
                         </div>
                     </div>
