--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                     <img src="images/kalai image1.jpeg" alt="Kalai Image" class="img-fluid profile-img">
                 </div>
                 <div class="col-lg-7">
-                    <p> As a dedicated Full Stack Developer at LetzBizz, I specialize in building responsive, scalable, and user-focused web applications using the MERN stack. With strong skills in HTML, CSS, JavaScript, and React, I enjoy turning ideas into well-designed digital experiences. I apply the knowledge gained through real-world projects, industry exposure, and continuous learning to create solutions that simplify tasks, improve usability, and add value to users. Passionate about clean code, problem-solving, and UI/UX principles, I am always exploring modern technologies to enhance my development workflow and deliver impactful results.</p>
+                    <p> As an energetic and passionate developer, I possess good knowledge in HTML, CSS, and JavaScript.
+                        I leverage the skills acquired through my coursework and self-study to create projects that address real-world problems, aiming to facilitate an easier and smarter life for society.</p>
                     <br>
                     <div class="row mt-3">
                         <div class="col-md-6">
@@ -76,7 +77,7 @@
                             <div class="info-box">
                                 <img src="https://cdn-icons-png.flaticon.com/128/2303/2303952.png" alt="experience imege" class="icon"><br>
                                 <h3>Experience</h3>
-                                <p>Full Stack Developer at Letzbizz | MERN Stack | React.js | Node.js | JavaScript | UI/UX Enthusiast</p>
+                                <p>Full Stack Developer | MERN Stack | React.js | Node.js | JavaScript | UI/UX Enthusiast</p>
                             </div>
                         </div>
                     </div>
