--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                     <img src="images/kalai image1.jpeg" alt="Kalai Image" class="img-fluid profile-img">
                 </div>
                 <div class="col-lg-7">
-                    <p> As an energetic and passionate developer, I possess good knowledge in HTML, CSS, and JavaScript.
-                        I leverage the skills acquired through my coursework and self-study to create projects that address real-world problems, aiming to facilitate an easier and smarter life for society.</p>
+                    <p> A motivated and detail oriented Full Stack Developer with hands-on experience in building projects using MongoDB,
+Express.js, React.js, and Node.js (MERN Stack). Skilled in creating responsive web applications and user-friendly interfaces. Eager
+to apply my knowledge, contribute to real-world projects, and grow as a professional developer.
+</p>
                     <br>
                     <div class="row mt-3">
                         <div class="col-md-6">
